--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -68,17 +68,48 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/ProductInfoID"
+                            android:layout_width="match_parent"
+                            android:layout_height="36dp"
+                            android:layout_weight="2.75"
+                            android:paddingLeft="8dp"
+                            android:gravity="center_vertical"
+                            android:background="@android:color/white"
+                            android:textColor="@color/colorAccent"
+                            android:textSize="12dp"
+                            android:text="@string/id"/>
+
+                        <TextView
+                            android:id="@+id/ProductInfoIDValue"
+                            android:layout_width="match_parent"
+                            android:layout_height="36dp"
+                            android:layout_weight="1"
+                            android:paddingLeft="8dp"
+                            android:gravity="center_vertical"
+                            android:background="@android:color/white"
+                            android:textColor="@color/colorAccent"
+                            android:textSize="12dp"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
                         <TextView
                             android:id="@+id/ProductInfoModel"
                             android:layout_width="match_parent"
                             android:layout_height="36dp"
+                            android:layout_weight="2.75"
                             android:paddingLeft="8dp"
                             android:gravity="center_vertical"
                             android:background="@android:color/white"
@@ -87,9 +118,58 @@
                             android:text="@string/model"/>
 
                         <TextView
+                            android:id="@+id/ProductInfoModelValue"
+                            android:layout_width="match_parent"
+                            android:layout_height="36dp"
+                            android:layout_weight="1"
+                            android:paddingLeft="8dp"
+                            android:gravity="center_vertical"
+                            android:background="@android:color/white"
+                            android:textColor="@color/colorAccent"
+                            android:textSize="12dp"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/ProductInfoSKU"
+                            android:layout_width="match_parent"
+                            android:layout_height="36dp"
+                            android:layout_weight="2.75"
+                            android:paddingLeft="8dp"
+                            android:gravity="center_vertical"
+                            android:background="@android:color/white"
+                            android:textColor="@color/colorAccent"
+                            android:textSize="12dp"
+                            android:text="@string/sku"/>
+
+                        <TextView
+                            android:id="@+id/ProductInfoSKUValue"
+                            android:layout_width="match_parent"
+                            android:layout_height="36dp"
+                            android:layout_weight="1"
+                            android:paddingLeft="8dp"
+                            android:gravity="center_vertical"
+                            android:background="@android:color/white"
+                            android:textColor="@color/colorAccent"
+                            android:textSize="12dp"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
                             android:id="@+id/ProductInfoPrice"
                             android:layout_width="match_parent"
                             android:layout_height="36dp"
+                            android:layout_weight="2.75"
                             android:layout_marginTop="1dp"
                             android:paddingLeft="8dp"
                             android:gravity="center_vertical"
@@ -99,9 +179,59 @@
                             android:text="@string/price"/>
 
                         <TextView
+                            android:id="@+id/ProductInfoPriceValue"
+                            android:layout_width="match_parent"
+                            android:layout_height="36dp"
+                            android:layout_weight="1"
+                            android:layout_marginTop="1dp"
+                            android:paddingLeft="8dp"
+                            android:gravity="center_vertical"
+                            android:background="@android:color/white"
+                            android:textColor="@color/colorAccent"
+                            android:textSize="12dp"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/ProductInfoQuantity"
+                            android:layout_width="match_parent"
+                            android:layout_height="36dp"
+                            android:layout_weight="2.75"
+                            android:paddingLeft="8dp"
+                            android:gravity="center_vertical"
+                            android:background="@android:color/white"
+                            android:textColor="@color/colorAccent"
+                            android:textSize="12dp"
+                            android:text="@string/quantity"/>
+
+                        <TextView
+                            android:id="@+id/ProductInfoQuantityValue"
+                            android:layout_width="match_parent"
+                            android:layout_height="36dp"
+                            android:layout_weight="1"
+                            android:paddingLeft="8dp"
+                            android:gravity="center_vertical"
+                            android:background="@android:color/white"
+                            android:textColor="@color/colorAccent"
+                            android:textSize="12dp"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
                             android:id="@+id/ProductInfoManufacturer"
                             android:layout_width="match_parent"
                             android:layout_height="36dp"
+                            android:layout_weight="2.75"
                             android:layout_marginTop="1dp"
                             android:paddingLeft="8dp"
                             android:gravity="center_vertical"
@@ -110,48 +240,78 @@
                             android:textSize="12dp"
                             android:text="@string/manufacturer"/>
 
+                        <TextView
+                            android:id="@+id/ProductInfoManufacturerValue"
+                            android:layout_width="match_parent"
+                            android:layout_height="36dp"
+                            android:layout_weight="1"
+                            android:layout_marginTop="1dp"
+                            android:paddingLeft="8dp"
+                            android:gravity="center_vertical"
+                            android:background="@android:color/white"
+                            android:textColor="@color/colorAccent"
+                            android:textSize="12dp"/>
+
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/ProductInfoModelValue"
+                            android:id="@+id/ProductInfoStatus"
                             android:layout_width="match_parent"
                             android:layout_height="36dp"
+                            android:layout_weight="2.75"
                             android:paddingLeft="8dp"
                             android:gravity="center_vertical"
                             android:background="@android:color/white"
                             android:textColor="@color/colorAccent"
-                            android:textSize="12dp"/>
+                            android:textSize="12dp"
+                            android:text="@string/status"/>
 
                         <TextView
-                            android:id="@+id/ProductInfoPriceValue"
+                            android:id="@+id/ProductInfoStatusValue"
                             android:layout_width="match_parent"
                             android:layout_height="36dp"
-                            android:layout_marginTop="1dp"
+                            android:layout_weight="1"
                             android:paddingLeft="8dp"
                             android:gravity="center_vertical"
                             android:background="@android:color/white"
-                            android:textColor="@color/colorAccent"
-                            android:textSize="12dp"/>
-
-                        <TextView
-                            android:id="@+id/ProductInfoManufacturerValue"
-                            android:layout_width="match_parent"
-                            android:layout_height="36dp"
-                            android:layout_marginTop="1dp"
-                            android:paddingLeft="8dp"
-                            android:gravity="center_vertical"
-                            android:background="@android:color/white"
-                            android:textColor="@color/colorAccent"
-                            android:textSize="12dp"/>
+                            android:textColor="@color/colorStatus15"
+                            android:textSize="12dp"
+                            android:text="@string/enable"/>
 
                     </LinearLayout>
 
                 </LinearLayout>
+
+                <TextView
+                    android:id="@+id/ProductDescription"
+                    android:layout_width="match_parent"
+                    android:layout_height="36dp"
+                    android:paddingLeft="8dp"
+                    android:gravity="center_vertical"
+                    android:background="@android:color/white"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="12dp"
+                    android:text="@string/product_desc"/>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="2.5dp"
+                    android:background="@color/colorPrimary"/>
+
+                <TextView
+                    android:id="@+id/ProductDescriptionValue"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="8dp"
+                    android:background="@android:color/white"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="12dp"
+                    android:text="..."/>
 
             </LinearLayout>
 
