--- a/app/src/main/res/layout/activity_app_settings.xml
+++ b/app/src/main/res/layout/activity_app_settings.xml
@@ -14,6 +14,7 @@
         android:orientation="vertical">
 
         <RelativeLayout
+            android:id="@+id/CheckBoxNotificationArea"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/white"
