--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -163,7 +163,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/line_graph_bg"
-                    android:id="@+id/linegraph"/>
+                    android:id="@+id/linegraph"
+                    android:visibility="gone"/>
+
+                <com.jjoe64.graphview.GraphView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/graphView" />
 
             </RelativeLayout>
 
