--- a/app/src/main/res/layout/app_widget.xml
+++ b/app/src/main/res/layout/app_widget.xml
@@ -12,8 +12,7 @@
         android:drawableLeft="@drawable/widget_logo"
         android:drawablePadding="8dp"
         android:textColor="@color/colorPrimary"
-        android:textSize="12dp"
-        android:text="00"/>
+        android:textSize="12dp"/>
 
     <TextView
         android:id="@+id/WidgetFilterName"
@@ -23,8 +22,7 @@
         android:layout_marginLeft="12dp"
         android:layout_marginBottom="8dp"
         android:textColor="@color/colorAccent"
-        android:textSize="12dp"
-        android:text="00"/>
+        android:textSize="12dp"/>
 
     <TextView
         android:id="@+id/WidgetDate"
@@ -36,8 +34,7 @@
         android:layout_marginBottom="8dp"
         android:gravity="right"
         android:textColor="@color/colorAccent"
-        android:textSize="12dp"
-        android:text="00"/>
+        android:textSize="12dp"/>
 
     <LinearLayout
         android:id="@+id/WidgetIcons"
@@ -91,7 +88,7 @@
             android:id="@+id/WidgetOrderCount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1.25"
+            android:layout_weight="1.20"
             android:drawableLeft="@drawable/widget_order"
             android:drawablePadding="4dp"
             android:gravity="center_vertical"
@@ -102,7 +99,7 @@
             android:id="@+id/WidgetUserCount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1.25"
+            android:layout_weight="1.20"
             android:drawableLeft="@drawable/widget_user"
             android:drawablePadding="4dp"
             android:gravity="center_vertical"
