--- a/app/src/main/res/layout/activity_master.xml
+++ b/app/src/main/res/layout/activity_master.xml
@@ -5,17 +5,137 @@
     android:layout_height="match_parent"
     tools:context="com.arastta.MasterActivity">
 
+    <LinearLayout
+        android:id="@+id/ContentArea"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/TopBar"
+        android:layout_above="@+id/GetArasttaCloud"
+        android:background="@color/colorBg"
+        android:orientation="vertical"/>
+
+    <TextView
+        android:id="@+id/GetArasttaCloud"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:textColor="@android:color/white"
+        android:textSize="18dp"
+        android:text="@string/get_arastta_cloud"/>
+
+    <RelativeLayout
+        android:id="@+id/FilterArea"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorTextPassive"
+        android:clickable="true"
+        android:visibility="gone">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:background="@color/colorDivider"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/FilterTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:background="@color/colorPrimary"
+                    android:gravity="center"
+                    android:textColor="@android:color/white"
+                    android:textSize="18dp"
+                    android:text="@string/date_range"/>
+
+                <ImageButton
+                    android:id="@+id/FilterClose"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:background="@drawable/icon_close"/>
+
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/FilterStartDateX"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:layout_marginTop="12dp"
+                android:gravity="center"
+                android:textColor="@color/colorAccent"
+                android:textSize="18dp"
+                android:text="@string/start_date"/>
+
+            <TextView
+                android:id="@+id/FilterStartDate"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
+                android:background="@android:color/white"
+                android:gravity="center"
+                android:textColor="@color/colorAccent"
+                android:textSize="18dp"/>
+
+            <TextView
+                android:id="@+id/FilterFinishDateX"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:gravity="center"
+                android:textColor="@color/colorAccent"
+                android:textSize="18dp"
+                android:text="@string/finish_date"/>
+
+            <TextView
+                android:id="@+id/FilterFinishDate"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
+                android:background="@android:color/white"
+                android:gravity="center"
+                android:textColor="@color/colorAccent"
+                android:textSize="18dp"/>
+
+            <TextView
+                android:id="@+id/FilterDone"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginTop="12dp"
+                android:background="@color/colorPrimary"
+                android:gravity="center"
+                android:textColor="@android:color/white"
+                android:textSize="18dp"
+                android:text="@string/done"/>
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
     <RelativeLayout
         android:id="@+id/TopBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary">
+        android:background="@color/colorPrimary"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <ImageButton
             android:id="@+id/MenuButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/icon_menu"/>
+            android:background="@drawable/icon_menu"
+            android:elevation="0dp" />
 
         <TextView
             android:id="@+id/MenuTitle"
@@ -26,18 +146,32 @@
             android:textColor="@android:color/white"
             android:textSize="18dp"/>
 
-        <ImageButton
-            android:id="@+id/SearchButton"
+        <LinearLayout
+            android:id="@+id/TopButtons"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:background="@drawable/icon_search"/>
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/FilterButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/icon_filter"/>
+
+            <ImageButton
+                android:id="@+id/SearchButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/icon_search"/>
+
+        </LinearLayout>
 
         <RelativeLayout
             android:id="@+id/SearchBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toLeftOf="@+id/SearchButton"
+            android:layout_toLeftOf="@+id/TopButtons"
             android:background="@color/colorPrimary"
             android:visibility="gone">
 
@@ -68,25 +202,5 @@
         </RelativeLayout>
 
     </RelativeLayout>
-
-    <LinearLayout
-        android:id="@+id/ContentArea"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/TopBar"
-        android:layout_above="@+id/GetArasttaCloud"
-        android:background="@color/colorBg"
-        android:orientation="vertical"/>
-
-    <TextView
-        android:id="@+id/GetArasttaCloud"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_alignParentBottom="true"
-        android:background="@color/colorPrimary"
-        android:gravity="center"
-        android:textColor="@android:color/white"
-        android:textSize="18dp"
-        android:text="@string/get_arastta_cloud"/>
 
 </RelativeLayout>
