--- a/app/src/main/res/layout/item_customers.xml
+++ b/app/src/main/res/layout/item_customers.xml
@@ -3,24 +3,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 	android:background="@null" >
-	
-	<RelativeLayout 
+
+	<RelativeLayout
 	    android:id="@+id/CustomerItem"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:padding="8dp"
-		android:background="@drawable/shadow_bg" >
+		android:background="@drawable/shadow_bg"
+		android:layout_alignParentTop="true"
+		android:layout_alignParentLeft="true"
+		android:layout_alignParentStart="true">
 
 		<LinearLayout
-			android:layout_width="wrap_content"
+			android:id="@+id/LinearLayout1"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
+			android:layout_toLeftOf="@+id/LinearLayout2"
 			android:orientation="vertical">
 
 			<TextView
 				android:id="@+id/CustomerFullname"
-				android:layout_width="wrap_content"
+				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:maxLines="1"
+				android:ellipsize="end"
 				android:textColor="@color/colorPrimary"
 				android:textSize="21dp"/>
 
@@ -45,6 +51,7 @@
 		</LinearLayout>
 
 		<LinearLayout
+			android:id="@+id/LinearLayout2"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_alignParentRight="true"
