--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -8,7 +8,10 @@
 		android:id="@+id/HistoryItem"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:background="@drawable/shadow_bg">
+		android:background="@drawable/shadow_bg"
+		android:layout_alignParentTop="true"
+		android:layout_alignParentLeft="true"
+		android:layout_alignParentStart="true">
 
 		<TextView
 			android:id="@+id/HistoryDate"
