--- a/app/src/main/res/layout/item_orders.xml
+++ b/app/src/main/res/layout/item_orders.xml
@@ -3,24 +3,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 	android:background="@null" >
-	
-	<RelativeLayout 
+
+	<RelativeLayout
 	    android:id="@+id/OrdersItem"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:padding="8dp"
-		android:background="@drawable/shadow_bg" >
+		android:background="@drawable/shadow_bg">
 
 		<LinearLayout
-			android:layout_width="wrap_content"
+			android:id="@+id/LinearLayout1"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
+			android:layout_toLeftOf="@+id/LinearLayout2"
 			android:orientation="vertical">
 
 			<TextView
 				android:id="@+id/OrderFullname"
-				android:layout_width="wrap_content"
+				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:maxLines="1"
+				android:ellipsize="end"
 				android:textColor="@color/colorText"
 				android:textSize="21dp"/>
 
@@ -45,6 +48,7 @@
 		</LinearLayout>
 
 		<LinearLayout
+			android:id="@+id/LinearLayout2"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_alignParentRight="true"
