--- a/app/src/main/res/layout/item_products.xml
+++ b/app/src/main/res/layout/item_products.xml
@@ -31,7 +31,7 @@
 
 			<TextView
 				android:id="@+id/ProductName"
-				android:layout_width="wrap_content"
+				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:maxLines="1"
 				android:ellipsize="end"
