--- a/app/src/main/res/layout/item_stores.xml
+++ b/app/src/main/res/layout/item_stores.xml
@@ -14,9 +14,11 @@
 
 		<TextView
 			android:id="@+id/StoreTitle"
-			android:layout_width="wrap_content"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_centerVertical="true"
+			android:layout_toLeftOf="@+id/StoreButton"
+			android:ellipsize="end"
 			android:layout_marginLeft="8dp"
 			android:gravity="center_vertical"
 			android:textColor="@color/colorPrimary"
